freest/test/prog/Invalid/SessionTypes/InvalidIn/InvalidIn.fst
module InvalidIn where

fun : !Int -> Int
fun c = receive c
